# snapbami

./: .env.example  .gitignore  Caddyfile  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
bamitools-server/: pyproject.toml
bamitools-server/scripts/: migrate.py  test-e2e.py
bamitools-server/tests/: test_config.py  test_html_loader.py  test_ids.py  test_migrations.py  test_routes_read.py  test_s3.py
bamitools-web/: index.html  package.json
bamitools-web/src/: main.tsx
docs/: DECISIONS.md  FUTURE.md  TODO.md  db.md  introduction.md  metaphor.md
docs/rfc/: 0001-core-platform.md  0002-mcp-and-tokens.md  0003-pluggable-tools.md  0004-deferred-langgraph-pipeline.md  0005-deferred-chat-telegram.md  0006-secure-share.md  0007-byok.md
githooks/: pre-commit
snapbami-server/: .env.example  pyproject.toml
snapbami-server/scripts/: migrate.py  test-e2e.py
snapbami-server/src/snapbami_server/: __init__.py  config.py  main.py
snapbami-server/src/snapbami_server/api/: routes_read.py  routes_spa.py
snapbami-server/src/snapbami_server/cache/: redis.py
snapbami-server/src/snapbami_server/db/: pool.py
snapbami-server/src/snapbami_server/db/migrations/: 001_dashboards.sql  002_indexes.sql
snapbami-server/src/snapbami_server/storage/: html_loader.py  s3.py
snapbami-server/src/snapbami_server/templates/: dashboard_loader.html
snapbami-server/tests/: test_config.py  test_html_loader.py  test_ids.py  test_migrations.py  test_routes_read.py  test_s3.py
snapbami-web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
(+19 files in other folders)
